--- a/oryx-client/pom.xml
+++ b/oryx-client/pom.xml
@@ -26,6 +26,7 @@
     <modules>
         <module>client-boot</module>
         <module>client-module</module>
+        <module>client-widget-lib</module>
         <module>client-ui</module>
         <module>client-ws-bridge</module>
         <module>client-core</module>
