--- a/oryx-cloud/MS001.Boot/pom.xml
+++ b/oryx-cloud/MS001.Boot/pom.xml
@@ -22,6 +22,13 @@
     </properties>
 
     <dependencies>
+        <!-- intern -->
+        <dependency>
+            <groupId>com.oryx.apps</groupId>
+            <artifactId>client-widget-lib</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
         <dependency>
             <groupId>com.vaadin</groupId>
             <artifactId>vaadin-spring-boot-starter</artifactId>
